Adding test for cmake supporting ssl

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,6 +40,7 @@ requirements:        # [unix]
 test:
   commands:
     - cmake --version
+    - cmake -V -P ${RECIPE_DIR}/SSLTest.cmake
 
 about:
   home: http://www.cmake.org/
